--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1>Test Cases Generator</h1>
 		<select id="dropdown" class="dropdown">
 			<option value="" selected disabled>Choose One</option>
-			<option value="longIdRet">Returns LongID</option>
-			<option value="classObjRet">Returns an object</option>
+			<option value="LongID Param">Returns LongID</option>
+			<option value="ClassObj Param">Returns an object</option>
 		</select>
         
         <div class="card">
